--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -12,3 +12,21 @@
 .wp-block-button.aligncenter {
 	text-align: center
 }
+.wp-block-button.alignright {
+	text-align: right
+}
+.wp-block-button__link {
+	background-color: #32373c;
+	border: none;
+	border-radius: 28px;
+	box-shadow: none;
+	color: inherit;
+	cursor: pointer;
+	display: inline-block;
+	font-size: 18px;
+	margin: 0;
+	padding: 12px 24px;
+	text-align: center;
+	text-decoration: none;
+	overflow-wrap: break-word
+}
