--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -42,3 +42,17 @@
 .is-style-outline {
 	color: #32373c
 }
+.is-style-outline .wp-block-button__link {
+	background-color: transparent;
+	border: 2px solid
+}
+.wp-block-calendar {
+	text-align: center
+}
+.wp-block-calendar tbody td, .wp-block-calendar th {
+	padding: 4px;
+	border: 1px solid #e2e4e7
+}
+.wp-block-calendar tfoot td {
+	border: none
+}
