--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -124,3 +124,13 @@
 .wp-block-columns.are-vertically-aligned-bottom {
 	align-items: flex-end
 }
+.wp-block-column.is-vertically-aligned-top {
+	align-self: flex-start
+}
+.wp-block-column.is-vertically-aligned-center {
+	-ms-grid-row-align: center;
+	align-self: center
+}
+.wp-block-column.is-vertically-aligned-bottom {
+	align-self: flex-end
+}
