--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -205,3 +205,22 @@
 	max-width: 305px;
 	width: 100%
 }
+.wp-block-cover-image:after, .wp-block-cover:after {
+	display: block;
+	content: "";
+	font-size: 0;
+	min-height: inherit
+}
+@supports ((position:-webkit-sticky) or (position:sticky)) {
+	.wp-block-cover-image:after, .wp-block-cover:after {
+		content: none
+	}
+}
+.wp-block-cover-image.aligncenter, .wp-block-cover-image.alignleft, .wp-block-cover-image.alignright, .wp-block-cover.aligncenter, .wp-block-cover.alignleft, .wp-block-cover.alignright {
+	display: flex
+}
+.wp-block-cover-image .wp-block-cover__inner-container, .wp-block-cover .wp-block-cover__inner-container {
+	width: calc(100% - 70px);
+	z-index: 1;
+	color: #f8f9f9
+}
