--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -244,3 +244,17 @@
 .wp-block-cover-image-text a, .wp-block-cover-image-text a:active, .wp-block-cover-image-text a:focus, .wp-block-cover-image-text a:hover, .wp-block-cover-text a, .wp-block-cover-text a:active, .wp-block-cover-text a:focus, .wp-block-cover-text a:hover, section.wp-block-cover-image h2 a, section.wp-block-cover-image h2 a:active, section.wp-block-cover-image h2 a:focus, section.wp-block-cover-image h2 a:hover {
 	color: #fff
 }
+.wp-block-cover-image .wp-block-cover.has-left-content {
+	justify-content: flex-start
+}
+.wp-block-cover-image .wp-block-cover.has-right-content {
+	justify-content: flex-end
+}
+.wp-block-cover-image.has-left-content .wp-block-cover-image-text, .wp-block-cover.has-left-content .wp-block-cover-text, section.wp-block-cover-image.has-left-content>h2 {
+	margin-left: 0;
+	text-align: left
+}
+.wp-block-cover-image.has-right-content .wp-block-cover-image-text, .wp-block-cover.has-right-content .wp-block-cover-text, section.wp-block-cover-image.has-right-content>h2 {
+	margin-right: 0;
+	text-align: right
+}
