--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -258,3 +258,23 @@
 	margin-right: 0;
 	text-align: right
 }
+.wp-block-cover-image .wp-block-cover-image-text, .wp-block-cover .wp-block-cover-text, section.wp-block-cover-image>h2 {
+	font-size: 2em;
+	line-height: 1.25;
+	z-index: 1;
+	margin-bottom: 0;
+	max-width: 610px;
+	padding: 14px;
+	text-align: center
+}
+.block-editor-block-list__block[data-type="core/embed"][data-align=left] .block-editor-block-list__block-edit, .block-editor-block-list__block[data-type="core/embed"][data-align=right] .block-editor-block-list__block-edit, .wp-block-embed.alignleft, .wp-block-embed.alignright {
+	max-width: 360px;
+	width: 100%
+}
+.wp-block-embed {
+	margin-bottom: 1em
+}
+.wp-block-embed figcaption {
+	margin-top: .5em;
+	margin-bottom: 1em
+}
