--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -417,3 +417,8 @@
 	width: 100%;
 	margin-right: 0
 }
+@media (min-width:600px) {
+	.blocks-gallery-grid.columns-3 .blocks-gallery-image, .blocks-gallery-grid.columns-3 .blocks-gallery-item, .wp-block-gallery.columns-3 .blocks-gallery-image, .wp-block-gallery.columns-3 .blocks-gallery-item {
+		width: calc((100% - 32px)/3);
+		margin-right: 16px
+	}
