--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -431,3 +431,8 @@
 		width: calc((100% - 48px)/4);
 		margin-right: 16px
 	}
+@supports (-ms-ime-align:auto) {
+		.blocks-gallery-grid.columns-4 .blocks-gallery-image, .blocks-gallery-grid.columns-4 .blocks-gallery-item, .wp-block-gallery.columns-4 .blocks-gallery-image, .wp-block-gallery.columns-4 .blocks-gallery-item {
+			width: calc((100% - 48px)/4 - 1px)
+		}
+	}
