--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -436,3 +436,7 @@
 			width: calc((100% - 48px)/4 - 1px)
 		}
 	}
+.blocks-gallery-grid.columns-5 .blocks-gallery-image, .blocks-gallery-grid.columns-5 .blocks-gallery-item, .wp-block-gallery.columns-5 .blocks-gallery-image, .wp-block-gallery.columns-5 .blocks-gallery-item {
+		width: calc((100% - 64px)/5);
+		margin-right: 16px
+	}
