--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -497,3 +497,10 @@
 		margin-right: 0
 	}
 }
+.blocks-gallery-grid .blocks-gallery-image:last-child, .blocks-gallery-grid .blocks-gallery-item:last-child, .wp-block-gallery .blocks-gallery-image:last-child, .wp-block-gallery .blocks-gallery-item:last-child {
+	margin-right: 0
+}
+.blocks-gallery-grid.alignleft, .blocks-gallery-grid.alignright, .wp-block-gallery.alignleft, .wp-block-gallery.alignright {
+	max-width: 305px;
+	width: 100%
+}
