--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -520,3 +520,12 @@
 .wp-block-image.alignfull img, .wp-block-image.alignwide img {
 	width: 100%
 }
+.wp-block-image .aligncenter, .wp-block-image .alignleft, .wp-block-image .alignright, .wp-block-image.is-resized {
+	display: table;
+	margin-left: 0;
+	margin-right: 0
+}
+.wp-block-image .aligncenter>figcaption, .wp-block-image .alignleft>figcaption, .wp-block-image .alignright>figcaption, .wp-block-image.is-resized>figcaption {
+	display: table-caption;
+	caption-side: bottom
+}
