--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -529,3 +529,11 @@
 	display: table-caption;
 	caption-side: bottom
 }
+.wp-block-image .alignleft {
+	float: left;
+	margin-right: 1em
+}
+.wp-block-image .alignright {
+	float: right;
+	margin-left: 1em
+}
