--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -537,3 +537,14 @@
 	float: right;
 	margin-left: 1em
 }
+.wp-block-image .aligncenter {
+	margin-left: auto;
+	margin-right: auto
+}
+.wp-block-image figcaption {
+	margin-top: .5em;
+	margin-bottom: 1em
+}
+.is-style-circle-mask img {
+	border-radius: 9999px
+}
