--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -572,3 +572,9 @@
 	min-height: 36px;
 	list-style: none
 }
+.has-avatars .wp-block-latest-comments__comment .wp-block-latest-comments__comment-excerpt, .has-avatars .wp-block-latest-comments__comment .wp-block-latest-comments__comment-meta {
+	margin-left: 52px
+}
+.has-dates .wp-block-latest-comments__comment, .has-excerpts .wp-block-latest-comments__comment {
+	line-height: 1.5
+}
