--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -588,3 +588,20 @@
 	display: block;
 	font-size: 12px
 }
+.wp-block-latest-comments .avatar, .wp-block-latest-comments__comment-avatar {
+	border-radius: 24px;
+	display: block;
+	float: left;
+	height: 40px;
+	margin-right: 12px;
+	width: 40px
+}
+.wp-block-latest-posts.alignleft {
+	margin-right: 2em
+}
+.wp-block-latest-posts.alignright {
+	margin-left: 2em
+}
+.wp-block-latest-posts.wp-block-latest-posts__list {
+	list-style: none
+}
