--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -671,3 +671,24 @@
 	grid-row: 1;
 	margin: 0
 }
+.wp-block-media-text .wp-block-media-text__content {
+	word-break: break-word;
+	padding: 0 8%
+}
+.wp-block-media-text.has-media-on-the-right .wp-block-media-text__media, .wp-block-media-text .wp-block-media-text__content {
+	-ms-grid-column: 2;
+	grid-column: 2;
+	-ms-grid-row: 1;
+	grid-row: 1
+}
+.wp-block-media-text.has-media-on-the-right .wp-block-media-text__content {
+	-ms-grid-column: 1;
+	grid-column: 1;
+	-ms-grid-row: 1;
+	grid-row: 1
+}
+.wp-block-media-text>figure>img, .wp-block-media-text>figure>video {
+	max-width: unset;
+	width: 100%;
+	vertical-align: middle
+}
