--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -731,3 +731,24 @@
 		grid-row: 1
 	}
 }
+.is-small-text {
+	font-size: 14px
+}
+.is-regular-text {
+	font-size: 16px
+}
+.is-large-text {
+	font-size: 36px
+}
+.is-larger-text {
+	font-size: 48px
+}
+.has-drop-cap:not(:focus):first-letter {
+	float: left;
+	font-size: 8.4em;
+	line-height: .68;
+	font-weight: 100;
+	margin: .05em .1em 0 0;
+	text-transform: uppercase;
+	font-style: normal
+}
