--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -752,3 +752,21 @@
 	text-transform: uppercase;
 	font-style: normal
 }
+.has-drop-cap:not(:focus):after {
+	content: "";
+	display: table;
+	clear: both;
+	padding-top: 14px
+}
+p.has-background {
+	padding: 20px 30px
+}
+p.has-text-color a {
+	color: inherit
+}
+.wp-block-pullquote {
+	padding: 3em 0;
+	margin-left: 0;
+	margin-right: 0;
+	text-align: center
+}
