--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -789,3 +789,21 @@ p.has-text-color a {
 .wp-block-pullquote:not(.is-style-solid-color) {
 	background: none
 }
+.wp-block-pullquote.is-style-solid-color {
+	border: none
+}
+.wp-block-pullquote.is-style-solid-color blockquote {
+	margin-left: auto;
+	margin-right: auto;
+	text-align: left;
+	max-width: 60%
+}
+.wp-block-pullquote.is-style-solid-color blockquote p {
+	margin-top: 0;
+	margin-bottom: 0;
+	font-size: 32px
+}
+.wp-block-pullquote.is-style-solid-color blockquote cite {
+	text-transform: none;
+	font-style: normal
+}
