--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -807,3 +807,19 @@ p.has-text-color a {
 	text-transform: none;
 	font-style: normal
 }
+.wp-block-pullquote cite {
+	color: inherit
+}
+.wp-block-quote.is-large, .wp-block-quote.is-style-large {
+	margin: 0 0 16px;
+	padding: 0 1em
+}
+.wp-block-quote.is-large p, .wp-block-quote.is-style-large p {
+	font-size: 24px;
+	font-style: italic;
+	line-height: 1.6
+}
+.wp-block-quote.is-large cite, .wp-block-quote.is-large footer, .wp-block-quote.is-style-large cite, .wp-block-quote.is-style-large footer {
+	font-size: 18px;
+	text-align: right
+}
