--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -839,3 +839,35 @@ p.has-text-color a {
 	margin: 0 16px 16px 0;
 	width: 100%
 }
+@media (min-width:600px) {
+	.wp-block-rss.columns-2 li {
+		width: calc(50% - 16px)
+	}
+	.wp-block-rss.columns-3 li {
+		width: calc(33.33333% - 16px)
+	}
+	.wp-block-rss.columns-4 li {
+		width: calc(25% - 16px)
+	}
+	.wp-block-rss.columns-5 li {
+		width: calc(20% - 16px)
+	}
+	.wp-block-rss.columns-6 li {
+		width: calc(16.66667% - 16px)
+	}
+}
+.wp-block-rss__item-author, .wp-block-rss__item-publish-date {
+	display: block;
+	color: #6c7781;
+	font-size: 13px
+}
+.wp-block-search {
+	display: flex;
+	flex-wrap: wrap
+}
+.wp-block-search .wp-block-search__label {
+	width: 100%
+}
+.wp-block-search .wp-block-search__input {
+	flex-grow: 1
+}
