--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -961,3 +961,19 @@ p.has-text-color a {
 	background-color: #f45800;
 	color: #fff
 }
+.wp-block-social-links:not(.is-style-logos-only) .wp-social-link-facebook {
+	background-color: #1977f2;
+	color: #fff
+}
+.wp-block-social-links:not(.is-style-logos-only) .wp-social-link-fivehundredpx {
+	background-color: #000;
+	color: #fff
+}
+.wp-block-social-links:not(.is-style-logos-only) .wp-social-link-flickr {
+	background-color: #0461dd;
+	color: #fff
+}
+.wp-block-social-links:not(.is-style-logos-only) .wp-social-link-foursquare {
+	background-color: #e65678;
+	color: #fff
+}
