--- a/styles/css/styles1.css
+++ b/styles/css/styles1.css
@@ -1043,3 +1043,112 @@ p.has-text-color a {
 	background-color: #1bd760;
 	color: #fff
 }
+.wp-block-social-links:not(.is-style-logos-only) .wp-social-link-tumblr {
+	background-color: #011835;
+	color: #fff
+}
+.wp-block-social-links:not(.is-style-logos-only) .wp-social-link-twitch {
+	background-color: #6440a4;
+	color: #fff
+}
+.wp-block-social-links:not(.is-style-logos-only) .wp-social-link-twitter {
+	background-color: #21a1f3;
+	color: #fff
+}
+.wp-block-social-links:not(.is-style-logos-only) .wp-social-link-vimeo {
+	background-color: #1eb7ea;
+	color: #fff
+}
+.wp-block-social-links:not(.is-style-logos-only) .wp-social-link-vk {
+	background-color: #4680c2;
+	color: #fff
+}
+.wp-block-social-links:not(.is-style-logos-only) .wp-social-link-wordpress {
+	background-color: #3499cd;
+	color: #fff
+}
+.wp-block-social-links:not(.is-style-logos-only) .wp-social-link-yelp {
+	background-color: #d32422;
+	color: #fff
+}
+.wp-block-social-links:not(.is-style-logos-only) .wp-social-link-youtube {
+	background-color: #ff0100;
+	color: #fff
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link {
+	background: none;
+	padding: 4px
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link svg {
+	width: 28px;
+	height: 28px
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-amazon {
+	color: #f90
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-bandcamp {
+	color: #1ea0c3
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-behance {
+	color: #0757fe
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-codepen {
+	color: #1e1f26
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-deviantart {
+	color: #02e49b
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-dribbble {
+	color: #e94c89
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-dropbox {
+	color: #4280ff
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-etsy {
+	color: #f45800
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-facebook {
+	color: #1977f2
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-fivehundredpx {
+	color: #000
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-flickr {
+	color: #0461dd
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-foursquare {
+	color: #e65678
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-github {
+	color: #24292d
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-goodreads {
+	color: #382110
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-google {
+	color: #ea4434
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-instagram {
+	color: #f00075
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-lastfm {
+	color: #e21b24
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-linkedin {
+	color: #0577b5
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-mastodon {
+	color: #3288d4
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-medium {
+	color: #02ab6c
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-meetup {
+	color: #f6405f
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-pinterest {
+	color: #e60122
+}
+.wp-block-social-links.is-style-logos-only .wp-social-link-pocket {
+	color: #ef4155
+}
