--- a/styles/css/custom.css
+++ b/styles/css/custom.css
@@ -137,3 +137,14 @@
     }
     
 }
+
+@media (max-width: 980px) {
+    /*gutters 1*/
+    .et_pb_gutters1 .et_pb_column_1_6, .et_pb_gutters1 .et_pb_row .et_pb_column_1_6
+    , .et_pb_gutters1 .et_pb_column_1_5, .et_pb_gutters1 .et_pb_row .et_pb_column_1_5
+    , .et_pb_gutters1 .et_pb_column_1_7, .et_pb_gutters1 .et_pb_row .et_pb_column_1_7
+    , .et_pb_gutters1 .et_pb_column_1_8, .et_pb_gutters1 .et_pb_row .et_pb_column_1_8 {
+        width: 33.3% !important;
+        margin-right: 0%;
+    }
+    
