--- a/styles/css/custom.css
+++ b/styles/css/custom.css
@@ -147,4 +147,7 @@
         width: 33.3% !important;
         margin-right: 0%;
     }
-    
+     .et_pb_gutters1 .et_pb_column_2_5, .et_pb_gutters1 .et_pb_row .et_pb_column_2_5 {
+        width: 40%;
+        margin-right: 0%;
+    }
