--- a/styles/css/custom.css
+++ b/styles/css/custom.css
@@ -157,3 +157,11 @@
         margin-right: 0%;
     }
     
+ /*gutters 2*/
+    .et_pb_gutters2 .et_pb_column_1_6, .et_pb_gutters2 .et_pb_row .et_pb_column_1_6
+    , .et_pb_gutters2 .et_pb_column_1_5, .et_pb_gutters2 .et_pb_row .et_pb_column_1_5
+    , .et_pb_gutters2 .et_pb_column_1_7, .et_pb_gutters2 .et_pb_row .et_pb_column_1_7
+    , .et_pb_gutters2 .et_pb_column_1_8, .et_pb_gutters2 .et_pb_row .et_pb_column_1_8 {
+        width: 31.28% !important;
+        margin-right: 3%;
+    }
