--- a/styles/css/custom.css
+++ b/styles/css/custom.css
@@ -175,3 +175,13 @@
         width: 58.5%;
         margin-right: 3%;
     }
+ 
+    /*gutters 3*/
+    .et_pb_gutters3 .et_pb_column_1_6, .et_pb_gutters3 .et_pb_row .et_pb_column_1_6
+    , .et_pb_gutters3 .et_pb_column_1_5, .et_pb_gutters3 .et_pb_row .et_pb_column_1_5
+    , .et_pb_gutters3 .et_pb_column_1_7, .et_pb_gutters3 .et_pb_row .et_pb_column_1_7
+    , .et_pb_gutters3 .et_pb_column_1_8, .et_pb_gutters3 .et_pb_row .et_pb_column_1_8 {
+        width: 29.667% !important;
+        margin-right: 5.5%;
+    }
+    
