--- a/styles/css/custom.css
+++ b/styles/css/custom.css
@@ -194,4 +194,16 @@
         width: 59.9%;
         margin-right: 5.5%;
     }
+        /*gutters 4*/
+    .et_pb_gutters4 .et_pb_column_1_6, .et_pb_gutters4 .et_pb_row .et_pb_column_1_6
+    , .et_pb_gutters4 .et_pb_column_1_5, .et_pb_gutters4 .et_pb_row .et_pb_column_1_5
+    , .et_pb_gutters4 .et_pb_column_1_7, .et_pb_gutters4 .et_pb_row .et_pb_column_1_7
+    , .et_pb_gutters4 .et_pb_column_1_8, .et_pb_gutters4 .et_pb_row .et_pb_column_1_8 {
+        width: 28% !important;
+        margin-right: 8%;
+    }
     
+    .et_pb_gutters4 .et_pb_column_2_5, .et_pb_gutters4 .et_pb_row .et_pb_column_2_5 {
+        width: 36.6%;
+        margin-right: 8%;
+    }
