--- a/styles/css/custom.css
+++ b/styles/css/custom.css
@@ -225,3 +225,27 @@
         margin-right: 0 !important;
     }
 }
+
+@media (max-width: 767px) {
+    
+    /*gutters 1*/
+    .et_pb_gutters1 .et_pb_column_1_6
+    , .et_pb_gutters1 .et_pb_row .et_pb_column_1_6
+    , .et_pb_gutters1 .et_pb_column_1_7
+    , .et_pb_gutters1 .et_pb_row .et_pb_column_1_7
+    , .et_pb_gutters1 .et_pb_column_1_8
+    , .et_pb_gutters1 .et_pb_row .et_pb_column_1_8
+    , .et_pb_gutters1 .et_pb_column_5_6
+    , .et_pb_gutters1 .et_pb_row .et_pb_column_5_6
+    , .et_pb_gutters1 .et_pb_column_1_5
+    , .et_pb_gutters1 .et_pb_row .et_pb_column_1_5
+    , .et_pb_gutters1 .et_pb_column_2_5
+    , .et_pb_gutters1 .et_pb_row .et_pb_column_2_5
+    , .et_pb_gutters1 .et_pb_column_3_5
+    , .et_pb_gutters1 .et_pb_row .et_pb_column_3_5
+    , .et_pb_gutters1 .et_pb_column_4_5
+    , .et_pb_gutters1 .et_pb_row .et_pb_column_4_5
+    {
+        width: 50% !important;
+        margin-right: 0%;
+    }
