--- a/styles/css/custom.css
+++ b/styles/css/custom.css
@@ -271,3 +271,27 @@
         width: 48.5% !important;
         margin-right: 3%;
     }
+    
+    /*gutters 3*/
+    .et_pb_gutters3 .et_pb_column_1_6
+    , .et_pb_gutters3 .et_pb_row .et_pb_column_1_6
+    , .et_pb_gutters3 .et_pb_column_1_7
+    , .et_pb_gutters3 .et_pb_row .et_pb_column_1_7
+    , .et_pb_gutters3 .et_pb_column_1_8
+    , .et_pb_gutters3 .et_pb_row .et_pb_column_1_8
+    , .et_pb_gutters3 .et_pb_column_5_6
+    , .et_pb_gutters3 .et_pb_row .et_pb_column_5_6
+    , .et_pb_gutters3 .et_pb_column_1_5
+    , .et_pb_gutters3 .et_pb_row .et_pb_column_1_5
+    , .et_pb_gutters3 .et_pb_column_2_5
+    , .et_pb_gutters3 .et_pb_row .et_pb_column_2_5
+    , .et_pb_gutters3 .et_pb_column_3_5
+    , .et_pb_gutters3 .et_pb_row .et_pb_column_3_5
+    , .et_pb_gutters3 .et_pb_column_4_5
+    , .et_pb_gutters3 .et_pb_row .et_pb_column_4_5
+    , .et_pb_gutters3 .et_pb_column_1_4
+    , .et_pb_gutters3 .et_pb_row .et_pb_column_1_4
+    {
+        width: 47.243% !important;
+        margin-right: 5.5%;
+    }    
