--- a/styles/css/custom.css
+++ b/styles/css/custom.css
@@ -340,3 +340,17 @@
         margin-right: 0 !important;
     }
 }
+
+@media (max-width: 479px) {
+    .et_pb_section .et_pb_row .et_pb_column.et_pb_column_1_6
+    , .et_pb_section .et_pb_row .et_pb_column.et_pb_column_1_7
+    , .et_pb_section .et_pb_row .et_pb_column.et_pb_column_1_8
+    , .et_pb_section .et_pb_row .et_pb_column.et_pb_column_5_6
+    , .et_pb_section .et_pb_row .et_pb_column.et_pb_column_1_5
+    , .et_pb_section .et_pb_row .et_pb_column.et_pb_column_2_5
+    , .et_pb_section .et_pb_row .et_pb_column.et_pb_column_3_5
+    , .et_pb_section .et_pb_row .et_pb_column.et_pb_column_4_5
+    {
+        width: 100%  !important;
+        margin: 0 0 30px 0;
+    }
